switche away from hibernate and jpa and use plain Jdbc instead